--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "cresswell"
   , "version": "0.0.1"
   , "private": true
+  , "scripts": {
+    "start": "node app"
+  }
   , "dependencies": {
       "express": "2.4.3"
     , "stylus": ">= 0.0.1"
